adjust width of person image, prevent overflow of text into bio image

--- a/ploneconf2016/policy/static/ploneconf2016.css
+++ b/ploneconf2016/policy/static/ploneconf2016.css
@@ -10,3 +10,8 @@
     display: none;
 }
 
+.col-xs-8.col-sm-3.person-bio {
+    padding-left: 0px !important;
+    min-width: 150px;
+    width: 160px;
+}
